// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Button Primary 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1rww6wo css-1m9ye6z css-1rl2kf2"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Primary Large 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1rww6wo css-ohzjfp css-1rl2kf2"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Primary Small 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1rww6wo css-mx5r2x css-1rl2kf2"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1rww6wo css-1m9ye6z css-1h7r5an"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary Large 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1rww6wo css-ohzjfp css-1h7r5an"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Components/Button Secondary Small 1`] = `
Array [
  <GlobalStyles />,
  <button
    className="css-1rww6wo css-mx5r2x css-1h7r5an"
    type="button"
  >
    Label
  </button>,
]
`;

exports[`Storyshots Design tokens/Colors Colors 1`] = `
Array [
  <GlobalStyles />,
  <h1>
    Design tokens colors
  </h1>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      white
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-1t4nbyx"
      >
        white
        <br />
        #ffffff
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      black
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-29nkp5"
      >
        black
        <br />
        #000000
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-50
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-fgx155"
      >
        purple-50
        <br />
        #f5e6fc
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-100
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-1jmvb5w"
      >
        purple-100
        <br />
        #e6bff9
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-200
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-26eyra"
      >
        purple-200
        <br />
        #d694f6
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-300
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-t3uqvh"
      >
        purple-300
        <br />
        #c566f3
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-400
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-jlt6u4"
      >
        purple-400
        <br />
        #b73ef0
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-500
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-bboz2p"
      >
        purple-500
        <br />
        #A800EB
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-600
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-dajvep"
      >
        purple-600
        <br />
        #9607e5
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-700
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-1l9nxfi"
      >
        purple-700
        <br />
        #7c0ade
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-800
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-om609x"
      >
        purple-800
        <br />
        #630bd9
      </span>
    </div>
  </div>,
  <div
    className="css-1mgahn1"
  >
    <p
      className="title"
    >
      purple-900
    </p>
    <div
      className="container"
    >
      <span
        className="css-196gut8 css-19besuv"
      >
        purple-900
        <br />
        #150dd2
      </span>
    </div>
  </div>,
]
`;
